# COMP5004-places

./: CMakeLists.txt  PlacesMain.cpp  README.md
PlacesoftheWorld/: CMakeLists.txt  Place.cpp  Place.h  PlaceManager.cpp  PlaceManager.h  PlacesMain.cpp  PlacesoftheWorld.slnx  PlacesoftheWorld.vcxproj  PlacesoftheWorld.vcxproj.filters
